# magicmodel

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
